[package]
name = "time-locked-vault"
version = "0.1.0"
edition = "2021"
description = "A Time-Locked Savings Vault for the Arch Network"
authors = ["Arthon"]

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.40"
borsh = "0.10.3"
borsh-derive = "0.10.3"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
